Fix overflow-x on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,14 @@
 body {
     position: relative;
     padding-top: 40px;
-    overflow-x: hidden;
 }
 
 p {
     font-size: 18px;
+}
+
+.site-wrapper {
+  overflow-x: hidden;
 }
 
 .page-header {
